<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".EmailPasswordActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:background="@drawable/icon_app_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/label_emailpassword"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/ex_large_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/desc_emailpassword"
            android:textColor="@color/colorText"
            android:textSize="@dimen/normal_text_size" />


        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@null"
            android:textColor="@color/colorError"
            android:textSize="@dimen/ex_small_small_text_size" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_round_5dp_empty"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:text="@null"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_round_5dp_empty"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:text="@null"
            android:textSize="@dimen/normal_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_sub"
                android:padding="10dp"
                android:text="@string/button_create_account"
                android:textColor="@drawable/button_textcolor_sub"
                android:textSize="@dimen/normal_text_size" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background_main"
                android:padding="10dp"
                android:text="@string/button_login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
